src/styles/linked_accounts.scss
.Layer__linked-accounts {
  box-sizing: border-box;
  z-index: 1;
  overflow: visible;
  min-height: 150px;
  max-width: var(--max-component-width);

  &::-webkit-scrollbar {
    display: none;
  }

  .Layer__linked-accounts__options.--hide-ledger-balance {
    position: relative;
    display: block;
  }
}

.Layer__linked-accounts .Layer__data-state {
  padding: var(--spacing-md);
  padding-top: 0;
}

.Layer__linked-accounts__header {
  position: sticky;
  left: 0;
  padding: var(--spacing-lg);
}

.Layer__linked-accounts__list {
  display: flex;
  flex-wrap: wrap;
  gap: var(--spacing-md);
  align-items: stretch;
  padding: var(--spacing-lg);

  @media screen and (width <= 650px) {
    flex-wrap: nowrap;
    overflow-x: scroll;
    overflow-y: hidden;
  }
}

.Layer__linked-accounts__header + .Layer__linked-accounts__list {
  padding-top: 0;
}

.Layer__linked-accounts__loader-container {
  min-height: 120px;
}

.Layer__linked-accounts__new-account {
  box-sizing: border-box;
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: center;
  min-height: 136px;

  min-width: 286px;
  max-width: 272px;
  padding: var(--spacing-2xs);
  border-radius: var(--border-radius-sm);
  border: 1px solid var(--border-color);
  background: var(--base-transparent-1);
  cursor: pointer;
  color: var(--color-base-700);
  transition: all 0.15s ease-out;

  &.--as-widget {
    min-height: 90px;
  }

  &.--show-ledger-balance {
    min-height: 156px;
  }

  &:hover {
    background: var(--base-transparent-2);
  }

  &.--disabled {
    cursor: not-allowed;
    opacity: 0.5;

    &:hover {
      background: var(--base-transparent-1);
    }
  }
}

/* stylelint-disable-next-line keyframes-name-pattern */
@keyframes skeletonSweep {
  100% {
    transform: translateX(100%);
  }
}

.skeleton-loader {
  position: relative;
  overflow: hidden;
  padding: 1rem;
  border-radius: var(--border-radius-base);
  background: var(--color-base-0);
}

.skeleton-loader::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  height: 100%;
  width: 100%;
  background:
    linear-gradient(
      90deg,
      transparent,
      var(--color-base-0),
      transparent
    );
  content: '';
  transform: translateX(-100%);
  animation: skeletonSweep 1.5s infinite;
}

.Layer__linked-account-thumb {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: var(--spacing-3xs);
  justify-content: space-between;
  height: 136px;
  width: 286px;
  padding: var(--spacing-2xs);
  border-radius: var(--border-radius-sm);
  border: 1px solid var(--border-color);
  background: var(--color-base-0);

  &.Layer__integrations-quickbooks-item-thumb {
    box-shadow: none;
  }

  &.--show-ledger-balance {
    height: 154px;
  }

  .topbar {
    box-sizing: border-box;
    display: flex;
    flex: 1;
    align-items: flex-start;
    justify-content: space-between;
    min-width: 272px;
    padding: var(--spacing-xs);
    border-top-left-radius: var(--border-radius-xs);
    border-top-right-radius: var(--border-radius-xs);
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    background: var(--color-base-50);
    color: var(--text-color-primary);

    &.--hide-ledger-balance {
      padding-bottom: var(--spacing-sm);
    }

    &.--is-syncing {
      z-index: 50;
      background: none;
      color: var(--color-base-500);
    }

    .topbar-details {
      display: flex;
      flex-direction: column;
      gap: var(--spacing-4xs);
      justify-content: stretch;
      min-width: 0;

      > .Layer__Span {
        flex: 1;
        width: 200px;
      }
    }

    .topbar-logo {
      display: flex;
      align-items: center;
      justify-content: center;
      height: 28px;
      width: 52px;
      padding: var(--spacing-3xs) 0;
      border-radius: var(--border-radius-3xs);
      background: var(--color-base-0);
      color: var(--color-base-200);
    }
  }

  .middlebar {
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 var(--spacing-xs);
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-left-radius: var(--border-radius-xs);
    border-bottom-right-radius: var(--border-radius-xs);
    background: var(--color-base-50);
  }

  .loadingbar {
    z-index: 100;
    display: flex;
    gap: var(--spacing-xs);
    align-items: center;
    padding: var(--spacing-xs);
    border-bottom-left-radius: var(--border-radius-xs);
    border-bottom-right-radius: var(--border-radius-xs);

    .loading-text {
      flex: 1;
      line-height: 140%;
    }

    .loading-wrapper {
      display: flex;
      align-items: center;
      justify-content: center;
      height: 28px;
      width: 28px;
      border-radius: 50%;
      background: var(--color-blue);
    }
  }

  .bottombar {
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: var(--spacing-3xs) var(--spacing-xs);
  }

  &.--is-syncing {
    background: hsl(200deg 11% 96%);
  }

  &.--as-widget {
    gap: var(--spacing-2xs);

    .topbar {
      border-bottom-left-radius: var(--border-radius-xs);
      border-bottom-right-radius: var(--border-radius-xs);
    }

    .account-number {
      display: flex;
      align-items: center;
      justify-content: center;
      height: 20px;
      padding: var(--spacing-3xs) var(--spacing-xs);
      border-radius: var(--border-radius-xs);
      background: var(--color-base-50);
      color: var(--color-base-500);
    }

    .bottombar {
      padding: 0 var(--spacing-xs) 0 0;
    }
  }
}

.Layer__linked-accounts__options {
  position: relative;
  display: flex;

  &.--hide-ledger-balance {
    position: relative;
    display: block;
  }

  &:hover .Layer__linked-accounts__options-overlay {
    opacity: 1;
    touch-action: auto;

    .Layer__linked-accounts__options-overlay-button {
      transform: translate3d(0, 0, 0);
    }
  }

  .Layer__linked-accounts__options-overlay {
    position: absolute;
    z-index: 99;
    top: var(--spacing-2xs);
    right: var(--spacing-2xs);
    display: flex;
    justify-content: flex-end;
    height: 54px;
    width: 74px;
    border-top-right-radius: var(--border-radius-sm);
    background:
      linear-gradient(
        270deg,
        var(--color-base-50) 1.52%,
        color-mix(in srgb, var(--color-base-50) 0%, transparent) 99.75%
      );
    opacity: 0;
    touch-action: none;
    transition: 0.15s all ease-out;

    .Layer__linked-accounts__options-overlay-button {
      display: flex;
      align-items: center;
      justify-content: center;
      height: 24px;
      width: 24px;
      border-radius: var(--spacing-2xs);
      border: none;
      box-shadow:
        0 0 8px 0
        var(--base-transparent-12);
      margin: var(--spacing-xs);
      background: var(--color-base-0);
      cursor: pointer;
      color: var(--color-base-1000);
      transform: translate3d(5px, -5px, 0);
      transition: 0.15s all ease-out;
    }
  }

  .Layer__linked-accounts__options-overlay--transparent {
    background: none;
  }
}

